--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,6 @@ body {
   background: black;
 }
 
-/* Início cabeçalho --------------------------*/
 .name-portfolio {
   position: absolute;
   top: 50px;
@@ -37,25 +36,20 @@ body {
   width: auto;
 }
 
-/* Fim cabeçalho --------------------------*/
-
-/* Início corpo --------------------------*/
-
 .corpo {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  /* flex-wrap: wrap; */
 }
 
 .coluna-esq {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   text-align: center;
   height: auto;
   width: 25%;
-  padding: 0px 10px 15px 0px;
+  padding: 0px 10px 10px 0px;
   background: white;
   box-shadow: 1px 1px 4px rgba(0,0,0,.5);
   border-radius: 15px;
@@ -67,9 +61,7 @@ body {
   width: 150px;
   background: rgb(122, 122, 122);
   border-radius: 100px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 30px;
+  margin: 30px auto 10px auto;
 }
 
 .foto img {
@@ -84,7 +76,7 @@ body {
 }
 
 .name-titulo {
-  margin-top: 30px;
+  margin: 10px 0 !important;
   color: rgb(128, 0, 128);
   font-weight: bold;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -99,44 +91,28 @@ body {
   -webkit-mask-image: linear-gradient(
   -75deg, rgba(255, 0, 0, 0.288) 30%, #000 10%, rgba(255, 0, 0, 0.288) 70%);
   -webkit-mask-size: 200%;
-   animation: efeito 2s alternate infinite;
-}
-
-.name-titulo:hover {
-  color: black;
-  font-size: 30px;
+  animation: efeito 2s alternate infinite;
+  margin-bottom: 10px;
+  margin: 5px 30px 5px 30px;
 }
 
 .name-cont {
+  margin: 0 0 10px 0 !important;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.2rem;
   text-align: center;
   color: black;
 }
 
-.botao-contato{
-  color: white;
-  background: #6495ED;
-  border: none;
-  text-align: center;
-  height: 3rem;
-  border-radius: 10px;
-  font-size: 1.2rem;
-}
-
-.botao-contato:hover { 
-  background: #447ce6;
-}
-
-.dados {
-  margin-top: 15px;
-}
-
 .apresentacao {
-  margin: 5px 30px 5px 30px;
+  margin: 0px 30px 5px 30px;
   font-family: 'Times New Roman', Times, serif;
   font-size: 1rem;
   text-align: justify;
+}
+
+.dados {
+  margin: 5px 30px 5px 30px;
 }
 
 .dados p {
@@ -144,9 +120,16 @@ body {
   justify-content: space-between;
   font-size: 1rem;
   font-family: 'Times New Roman', Times, serif;
-  margin: 5px 30px 5px 30px;
+  margin: 10px 5;
   color: black;
- 
+  text-align: justify;
+}
+
+.habilidades {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 10px 20px 35px 20px;
 }
 
 .links a {
@@ -161,12 +144,6 @@ body {
   color: blue;
 }
 
-.habilidades {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin: 5px 30px 5px 30px;
-}
 
 .hab-context {
   margin: 1px;
@@ -408,38 +385,77 @@ button {
 
 /* Responsividade */
 
-@media all and (max-width: 1149px) {
-
-  .coluna-dir {
-    margin-top: 100px;
-  }
-  .botoesalternadores {
-    padding: 10px;
-    font-size: 1.2rem;
-  }
-  .botoesalternadores:hover {
-    padding: 12px;
-    font-size: 1.3rem;
-  }
-  .corpo {
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-}
-@media (max-width: 1024px) {
-  .item {
-    width: 45%;
-  }
-}
-
 @media (max-width: 768px) {
+  .corpo {
+    flex-direction: column;
+    padding: 0 10px;
+  }
+
+  .coluna-esq, .coluna-dir {
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px;
+  }
+
+  .name-portfolio {
+    font-size: 2.5em;
+    padding-right: 10px;
+    top: 20px;
+  }
+
+  .foto {
+    height: 120px;
+    width: 120px;
+  }
+
+  .foto img {
+    height: 120px;
+    width: 120px;
+  }
+
   .item {
     width: 100%;
   }
+
+  .bar-col-dir {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .botoesalternadores {
+    margin-bottom: 10px;
+    width: 100%;
+  }
+
+  .rodape p {
+    font-size: 16px;
+    padding: 10px;
+  }
+
+  .apresentacao, .dados p, .habilidades {
+    margin: 10px;
+  }
 }
 
-@media all and (max-width: 1024px) {
+@media (max-width: 480px) {
   .name-portfolio {
-    padding-right: 5px;
+    font-size: 2em;
+  }
+
+  .name-titulo {
+    font-size: 20px;
+  }
+
+  .description {
+    font-size: 1em;
+  }
+
+  .text-description {
+    font-size: 0.9em;
+  }
+
+  .botoes-item, .btn-copiar {
+    flex-direction: column;
+    gap: 10px;
   }
 }
